Added a self updating clock
In this commit , A clock has been added which shows and update time every second.

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-  font: normal 14px/100% "Andale Mono", AndaleMono, monospace;
+  /*font: normal 14px/100% "Andale Mono", AndaleMono, monospace;*/
   color: #fff;
   padding: 50px;
   width: 300px;
